[gd_scene load_steps=15 format=3 uid="uid://j46ywocn583x"]

[ext_resource type="Script" path="res://Player/spring.gd" id="1_7ju1w"]
[ext_resource type="Texture2D" uid="uid://c56dri60riy1s" path="res://Release/Springs/SpringUpIdle.png" id="1_creq8"]
[ext_resource type="Texture2D" uid="uid://4kji0e6ja4x" path="res://Release/Springs/SpringUpTrigger.png" id="1_yswnp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ihil6"]
atlas = ExtResource("1_yswnp")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubmmt"]
atlas = ExtResource("1_yswnp")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ffmv"]
atlas = ExtResource("1_yswnp")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ldej"]
atlas = ExtResource("1_yswnp")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qj6t"]
atlas = ExtResource("1_yswnp")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1o7q"]
atlas = ExtResource("1_yswnp")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtpvi"]
atlas = ExtResource("1_yswnp")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxntf"]
atlas = ExtResource("1_creq8")
region = Rect2(0, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_km08r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihil6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubmmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ffmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ldej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qj6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1o7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtpvi")
}],
"loop": false,
"name": &"bounce",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxntf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_288e8"]
a = Vector2(-8, 0)
b = Vector2(8, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcfue"]
size = Vector2(18, 1)

[node name="Spring" type="StaticBody2D"]
script = ExtResource("1_7ju1w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_km08r")
animation = &"bounce"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("SegmentShape2D_288e8")
disabled = true

[node name="ArrowMarker" type="Marker2D" parent="."]
position = Vector2(0, -12)

[node name="BounceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
shape = SubResource("RectangleShape2D_pcfue")
debug_color = Color(0.848087, 0.32755, 0.482167, 0.42)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="BounceArea" to="." method="_trigger_bounce"]
